# Navigation

fira_6/fira6_control/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
fira_6/fira6_control/config/: fira6_control.yaml  fira6_control.yaml~
fira_6/fira6_control/launch/: control.launch  control.launch~  fira6_control.launch~  keyboard_teleop.launch  keyboard_teleop.launch~
fira_6/fira6_description/: CMakeLists.txt~  package.xml~
fira_6/fira6_description/launch/: box_robot_base_only.launch~  omnidrive.launch~
fira_6/fira6_description/urdf/: back_up.xacro  fir6.xacro~  fira6.gazebo  fira6.xacro  omni_directional_wheel.xacro~  omnidrive.xacro  omnidrive.xacro~
fira_6/fira6_gazebo/: CMakeLists.txt  package.xml
fira_6/fira6_gazebo/launch/: UEC_research.launch  fira6_fake_omni_empty_world.launch  fira6_fake_omni_empty_world.launch~  fira6_world.launch  spawn_fake_omni_fira.launch  spawn_fira.launch  test_detect.launch
fira_6/fira6_gazebo/worlds/: clearpath_playpen.world  clearpath_playpen.world~  fira6.world  fira6.world~  test.world  test.world~  test_detect.world  test_detect.world~
fira_6/fira6_navigation/: CMakeLists.txt  package.xml
fira_6/fira6_navigation/config/: costmap_common.yaml  costmap_common.yaml~  costmap_global_laser.yaml~  costmap_global_static.yaml  costmap_global_static.yaml~  costmap_local.yaml  planner.yaml  planner.yaml~
fira_6/fira6_navigation/launch/: move_base.launch  move_base.launch~  move_base_mapless_demo.launch  move_base_mapless_demo.launch~  slam.launch
fira_6/fira6_navigation/map/husky/: my_map.yaml
fira_6/fira6_navigation/rviz/: test.rviz
fira_6/fira6_strategy/: CMakeLists.txt  CMakeLists.txt~  package.xml
fira_6/fira6_strategy/src/: fira6_strategy.cpp  fira6_strategy.cpp~  print_model_state.cpp  print_model_state.cpp~
gazebo_plugin_tutorial/: CMakeLists.txt  hello.world~  hello_world.cc~  package.xml  package.xml~
gazebo_plugin_tutorial/gz_plugin/for2wheel_robot/: 2wheel_robot  2wheel_robot~
gazebo_plugin_tutorial/learning_resource/: Learning resource
gazebo_plugin_tutorial/src/: 3w_motion.cc  DiffDrivePlugin.cc  DiffDrivePlugin.hh  DiffDrivePlugin_test.cc  DiffDrivePlugin_test.hh  hello_world.cc  test.cc  wu_omni.cc
gazebo_plugin_tutorial/world/: hello.world  hello.world~
grid_layers/: CMakeLists.txt  CMakeLists.txt~  Test gridmap on turtlebot  costmap_plugins.xml  costmap_plugins.xml~  package.xml  package.xml~
grid_layers/include/grid_layers/: grid_layer.h
grid_layers/src/: grid_layer.cpp  grid_layer.cpp~
learning_joy/: CMakeLists.txt  manifest.json  readme
learning_joy/script/: joy_control.py  joy_control.py~
learning_joy/src/: turtle_teleop_joy.cpp~
obstacle_detector/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml  rviz_plugins.xml
obstacle_detector/include/: obstacle_extractor.h  obstacle_publisher.h  obstacle_recorder.h  obstacle_tracker.h  scans_merger.h
obstacle_detector/include/displays/: circle_visual.h  obstacles_display.h  segment_visual.h
obstacle_detector/include/panels/: obstacle_extractor_panel.h  scans_merger_panel.h
obstacle_detector/include/utilities/: circle.h  figure_fitting.h  math_utilities.h  point_set.h  segment.h  tracked_obstacle.h
obstacle_detector/launch/: UEC_research.launch  nodelets_example.launch  nodes_example.launch
obstacle_detector/msg/: Obstacle_map.msg
obstacle_detector/resources/: obstacle_detector.rviz
obstacle_detector/src/: obstacle_extractor.cpp  obstacle_publisher.cpp  obstacle_recorder.cpp  obstacle_tracker.cpp  scans_merger.cpp
obstacle_detector/src/displays/: circle_visual.cpp  obstacles_display.cpp  segment_visual.cpp
obstacle_detector/src/nodelets/: obstacle_extractor_nodelet.cpp  obstacle_publisher_nodelet.cpp  obstacle_recorder_nodelet.cpp  obstacle_tracker_nodelet.cpp  scans_merger_nodelet.cpp
obstacle_detector/src/nodes/: obstacle_extractor_node.cpp  obstacle_map.cpp  obstacle_publisher_node.cpp  obstacle_recorder_node.cpp  obstacle_tracker_node.cpp  scans_merger_node.cpp
obstacle_detector/src/panels/: obstacle_extractor_panel.cpp  scans_merger_panel.cpp
ros_navigation/costmap_2d/include/costmap_2d/: inflation_layer.h
ros_navigation/costmap_2d/plugins/: obstacle_layer.cpp
ros_navigation/costmap_2d/src/: costmap_2d.cpp  costmap_2d.cpp~
ros_navigation/move_base/: CMakeLists.txt~
ros_navigation/move_base/include/move_base/: move_base.h
ros_navigation/move_base/src/: move_base.cpp
simple_layers/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
simple_layers/include/simple_layers/: simple_layer.h
simple_layers/src/: simple_layer.cpp  simple_layer.cpp~
