<?xml version="1.0"?>
<package>
  <name>fira6_gazebo</name>
  <version>0.0.0</version>
  <description>The fira6_gazebo package</description>

  <maintainer email="jianming1481@gmail.com">jianming</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
